fix(menu-clock): make the date smaller so the time is more visible

--- a/src/menu-clock/styles.styl
+++ b/src/menu-clock/styles.styl
@@ -3,6 +3,9 @@
   margin-top 9px
   padding-top: 9px
   border-top 1px solid #e2e6ed
-  font-size 2em
+  line-height 2.1em
   color #33567f
   -webkit-user-select none
+
+.vkx-time
+  font-size 2em
